--- a/src/components/Payment/style.css
+++ b/src/components/Payment/style.css
@@ -59,7 +59,6 @@ p {
     padding: 0;
     font-weight: 500;
     margin-top: 15px;
-    margin-bottom: 30px;
 }
 
 .content {
@@ -100,7 +99,7 @@ p {
 }
 
 .nav_bar_info_count {
-    padding: 16px 24px;
+    padding: 12.5px 24px;
     text-align: center;
     background-color: #f1f8fc;
     font-size: 14px;
@@ -115,6 +114,7 @@ p {
 }
 
 .nav_bar_info_content > h4, .nav_bar_info_detail {
+    margin: 0;
     padding: 15px 24px;
 }
 
